# compression-project

./: .gitignore  CMakeLists.txt  README.md  comparator_script.py  diagram.groza  file.txt  main.cpp  test.groza  test.groza~  test.txt  test1.doc  test1.groza  test1.txt  test1groza.txt  testgroza.txt
files/: 1.groza  10mb.groza  alice_in_wonderland.groza  alice_in_wonderland.groza.txt  alice_in_wonderlandgroza.txt  book-war-and-peace.groza  diagram.groza  home.groza  me.groza  test.groza  test.groza.txt  test.txt  test_icon.groza  test_photo.groza
include/: BinTree.h  BitBuffer.h  Decode.h  Huffman.h  HuffmanCompress.h  HuffmanDecompress.h  HuffmanDictionary.h  HuffmanProperties.h  LZW.h  Parser.h  huffman.h  lzw.h
include/Huffman/: Huffman.h  HuffmanCompress.h  HuffmanDecompress.h  HuffmanDictionary.h
include/LZW/: LZW.h  LZW_compress.h  LZW_decompress.h
src/: BinTree.cpp  BitBuffer.cpp  Decode.cpp  Huffman.cpp  HuffmanCompress.cpp  HuffmanDecompress.cpp  HuffmanDictionary.cpp  HuffmanProperties.cpp  LZW.cpp  Parser.cpp  huffman.cpp  lzw.cpp
src/Huffman/: Huffman.cpp  HuffmanCompress.cpp  HuffmanDecompress.cpp  HuffmanDictionary.cpp  HuffmanProperties.cpp
src/LZW/: LZW.cpp  LZW_compress.cpp  LZW_decompress.cpp
